--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,50 +6,51 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
+    android:background="@drawable/blue_signal"
     tools:context=".MainActivity">
 
     <!-- 入力用 EditText -->
-    <EditText
-        android:id="@+id/editTextText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/edit_message"
-        android:inputType="text" />
+<EditText
+android:id="@+id/editTextText"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:hint="@string/edit_message"
+android:inputType="text" />
 
     <!-- メニューに移動するボタン -->
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:onClick="moveToMenu"
-        android:text="@string/button_menu" />
+<Button
+android:id="@+id/button2"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginTop="16dp"
+android:onClick="moveToMenu"
+android:text="@string/button_menu" />
 
     <!-- デバイスを振動させるボタン -->
-    <Button
-        android:id="@+id/button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:onClick="vibrate"
-        android:text="@string/button_vibrate" />
+<Button
+android:id="@+id/button"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginTop="16dp"
+android:onClick="vibrate"
+android:text="@string/button_vibrate" />
 
     <!-- 音声認識を開始/停止するスイッチ -->
-    <Switch
-        android:id="@+id/toggleSwitch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="音声認識を開始" />
+<Switch
+android:id="@+id/toggleSwitch"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginTop="16dp"
+android:text="音声認識を開始" />
 
     <!-- 音量レベルを表示するテキストビュー -->
-    <TextView
-        android:id="@+id/rmsTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="音量レベル: 0"
-        android:textSize="18sp"
-        android:gravity="center_horizontal" />
+<TextView
+android:id="@+id/rmsTextView"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:layout_marginTop="16dp"
+android:text="音量レベル: 0"
+android:textSize="18sp"
+android:gravity="center_horizontal" />
 
-</LinearLayout>
+    </LinearLayout>
