--- a/app/src/main/res/layout/setting.xml
+++ b/app/src/main/res/layout/setting.xml
@@ -1,70 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Intensity Section -->
+    <TextView
+        android:id="@+id/intensity_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Intensity: 50"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
+        android:textColor="#000000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <Popup>:
-    title: "Settings"
-    size_hint: None, None
-    size: 400, 400
+    <SeekBar
+        android:id="@+id/intensity_slider"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:progress="50"
+        app:layout_constraintTop_toBottomOf="@id/intensity_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    BoxLayout:
-        orientation: "vertical"
-        padding: 15
-        spacing: 10
+    <!-- Frequency Section -->
+    <TextView
+        android:id="@+id/frequency_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Frequency: 2"
+        android:textSize="16sp"
+        android:layout_marginTop="16dp"
+        android:textColor="#000000"
+        app:layout_constraintTop_toBottomOf="@id/intensity_slider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        Label:
-            id: intensity_label
-            text: "Intensity: 50"
-            font_size: 16
-            color: 0, 0, 0, 1
+    <SeekBar
+        android:id="@+id/frequency_slider"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:max="5"
+        android:progress="2"
+        app:layout_constraintTop_toBottomOf="@id/frequency_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        Slider:
-            id: intensity_slider
-            min: 0
-            max: 100
-            value: 50
-            on_value: intensity_label.text = f"Intensity: {int(self.value)}"
-
-        Label:
-            id: frequency_label
-            text: "Frequency: 2"
-            font_size: 16
-            color: 0, 0, 0, 1
-
-        Slider:
-            id: frequency_slider
-            min: 0
-            max: 5
-            value: 2
-            on_value: frequency_label.text = f"Frequency: {int(self.value)}"
-
-        Button:
-            text: "Close"
-            background_color: 0.2, 0.6, 0.2, 1
-            color: 1, 1, 1, 1
-            on_press: root.dismiss()
-
-        <Popup>:
-    title: "Help"
-    size_hint: None, None
-    size: 400, 300
-
-    BoxLayout:
-        orientation: "vertical"
-        padding: 15
-
-        Label:
-            text: "Help information"
-            font_size: 16
-            color: 0, 0, 0, 1
-
-        Button:
-            text: "Close"
-            background_color: 0.2, 0.6, 0.2, 1
-            color: 1, 1, 1, 1
-            on_press: root.dismiss()
-
+    <!-- Close Button -->
+    <Button
+        android:id="@+id/close_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Close"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#338833"
+        android:textColor="#FFFFFF"
+        app:layout_constraintTop_toBottomOf="@id/frequency_slider"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
