--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -40,17 +40,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Close Button -->
     <SeekBar
         android:id="@+id/frequency_slider"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:max="5"
         android:progress="2"
-        app:layout_constraintTop_toBottomOf="@id/frequency_label"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/frequency_label" />
 
-    <!-- Close Button -->
     <Button
         android:id="@+id/close_button"
         android:layout_width="wrap_content"
