--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="16dp">
 
-    <!-- Intensity Section -->
+    <!-- Intensity Label -->
     <TextView
         android:id="@+id/intensity_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Intensity: 50"
         android:textSize="16sp"
-        android:layout_marginTop="16dp"
-        android:textColor="#000000"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textColor="#000000" />
 
+    <!-- Intensity Slider -->
     <SeekBar
         android:id="@+id/intensity_slider"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:max="100"
-        android:progress="50"
-        app:layout_constraintTop_toBottomOf="@id/intensity_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:progress="50" />
 
-    <!-- Frequency Section -->
+    <!-- Frequency Label -->
     <TextView
         android:id="@+id/frequency_label"
         android:layout_width="wrap_content"
@@ -35,33 +30,25 @@
         android:text="Frequency: 2"
         android:textSize="16sp"
         android:layout_marginTop="16dp"
-        android:textColor="#000000"
-        app:layout_constraintTop_toBottomOf="@id/intensity_slider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textColor="#000000" />
 
-    <!-- Close Button -->
+    <!-- Frequency Slider -->
     <SeekBar
         android:id="@+id/frequency_slider"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:max="5"
-        android:progress="2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/frequency_label" />
+        android:progress="2" />
 
+    <!-- Close Button -->
     <Button
         android:id="@+id/close_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Close"
         android:layout_marginTop="16dp"
-        android:backgroundTint="#338833"
+        android:background="#338833"
         android:textColor="#FFFFFF"
-        app:layout_constraintTop_toBottomOf="@id/frequency_slider"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:layout_gravity="center" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
