--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,24 @@
     android:orientation="vertical"
     android:padding="16dp"
     android:background="@drawable/blue_signal"
-    tools:context=".MainActivity2">
+    tools:context=".MainActivity">
+
+    <!-- メニューに移動するボタン -->
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentEnd="true"
+        android:layout_gravity="right"
+        android:layout_margin="16dp"
+        android:onClick="moveToMenu"
+        android:text="ｍ"
+        android:textSize="16sp"
+        android:backgroundTint="#ff7f50"
+        android:textColor="#ffffff"
+        android:contentDescription="Menu" />
+
+
 
     <!-- 音量レベルを表示するテキストビュー -->
     <TextView
@@ -31,17 +48,24 @@
         android:textColor="#ffffff"
         android:gravity="center_horizontal" />
 
+
+    <!-- 中央に配置するスタートボタン -->
+    <Button
+        android:id="@+id/startButton"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
+        android:backgroundTint="#00B7B8BD"
+        android:text="START"
+        android:textSize="24sp"
+        android:textColor="#ffffff"
+        android:elevation="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
+        android:gravity="center"
+        android:onClick="startAction" />
     <!-- 音声録音を開始/停止するスイッチ -->
-    <Switch
-        android:id="@+id/toggleSwitch"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:text="録音を開始"
-        android:textSize="16sp"
-        android:padding="8dp"
-        android:gravity="center_vertical"
-        android:textColor="#ffffff" />
+
 
     <!-- デバイスを振動させるボタン -->
     <Button
@@ -55,17 +79,7 @@
         android:backgroundTint="#1e90ff"
         android:textColor="#ffffff" />
 
-    <!-- メニューに移動するボタン -->
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:onClick="moveToMenu"
-        android:text="メニューに移動"
-        android:textSize="16sp"
-        android:backgroundTint="#ff7f50"
-        android:textColor="#ffffff" />
+
 
     <!-- テキスト入力フィールド -->
     <EditText
